<resources>
    <string name="app_name">euronews.</string>
    <string name="tv_main">What can magic mushrooms teach \nus about preserving nature?</string>
    <string name="tv_uk">UNITED KINGDOM</string>
    <string name="tv_date">FRI,JAN 31,2020</string>
    <string name="tv_person">By Maeve Campbell</string>
    <string name="tv_desc">This trippy new London exhibit will spark your \nfungal fascination.</string>
    <string name="tv_paragraph">“Mushrooms are nature’s computers,\ncommunicating through their hyphae\nlike our neural network.”</string>
    <string name="tv_text">Spelt out in big letters and written across the\nwall, this quote is what greets you at London’s\nnew psychedelic exhibition – a veritable\ncelebration of the mushroom. Mushrooms:\nThe art, design and future of fungi has just\nopened its doors to the public at Somerset\nHouse, and already, I notice the array of\nvisitors is eclectic. A group of women in their\nearly twenties amble in together, all with\npiercings and/or multi-coloured hair, donning\ncurious looks at the art whilst leaning in to inspect the captions.\n\nMiddle-aged couples in fraying jumpers and\ntrainers share the space, grinning at each\nother with knowing looks as they ponder the\n
        installations, no doubt nostalgic for their\nhippie youths.\n\nThree TV screens stand facing each other in\nthe second viewing gallery, depicting several\nfigures dancing to techno music in a\nfluorescent green room. We are invited to\nstand between each of the screens, watching\nas animated mushrooms grow up the sides\nof the walls and the figures dance somewhat\nwildly. On a nearby wall, disorientated\ncollages of religious figures interspersed with\nfungi are on display– artist Lara Ögel seeks to\nrepresent the sense of spiritual liberation\nbrought about by the psychedelic experience.\n\nCollage seems to be a popular medium for\nmushroom art, as it’s impossible to miss\nSeana Gavin’s bright, anthropomorphic cut\n-and-paste creations, which make the viewer\nfeel as if they have entered a hallucination\nthemselves.</string>

</resources>

